# physical-ai-harness

./: .gitignore  README.md  ROADMAP.md  pyproject.toml
data/evolution_llm/: evolution_report.json
data/evolution_llm/cycle_000/: data_stats.json  metrics.json  skill_library.json
data/evolution_llm/cycle_001/: data_stats.json  metrics.json  skill_library.json
data/evolution_llm/cycle_002/: data_stats.json  metrics.json  skill_library.json
data/evolution_llm/cycle_003/: data_stats.json  metrics.json  skill_library.json
data/evolution_llm/cycle_004/: data_stats.json  metrics.json  skill_library.json
data/evolution_mvp1/: evolution_report.json
data/evolution_mvp1/cycle_000/: data_stats.json  metrics.json
data/evolution_mvp1/cycle_001/: data_stats.json  metrics.json
data/evolution_mvp1/cycle_002/: data_stats.json  metrics.json
data/evolution_pybullet/: evolution_report.json
data/evolution_pybullet/cycle_000/: data_stats.json  metrics.json  skill_library.json
data/evolution_pybullet/cycle_001/: data_stats.json  metrics.json
data/evolution_pybullet/cycle_002/: data_stats.json  metrics.json
data/evolution_pybullet/cycle_003/: data_stats.json  metrics.json
data/evolution_pybullet_v2/: evolution_report.json
data/test_evolution_multi/: evolution_report.json
demo/: nanobot_config.json  nanobot_config_robot.json  run_demo.py  system_prompt.md  system_prompt_robot.md
docs/: INSTALL.md  TEST_RESULTS.md  architecture.md
harness/: __init__.py  __main__.py  adapter.py  events.py  mcp_server.py  mcp_tools_robot.py  models.py  safety.py
harness/adapters/: ai2thor_adapter.py  mock_adapter.py  virtualhome_adapter.py
harness/adapters/gazebo/: __init__.py  (+3 more)
scripts/: run_mvp1.py
tests/: generate_demo.py  mini_mqtt_broker.py  mqtt_virtual_devices.py  test_ai2thor_real.py  test_e2e_demo.py  test_full_pipeline.py  test_mcp_results.json  test_mcp_server.py  test_mqtt_real.py  test_mujoco_e2e_demo.py  test_mujoco_mcp_tools.py  test_mujoco_pipeline.py  test_mujoco_results.json  test_new_adapters.py  test_new_adapters_results.json  test_pybullet_real.py  test_results.json  test_sumo_real.py  test_world_model.py
tests/ai2thor_results/: real_test_report.json  virtualhome_test_report.json
tests/mqtt_results/: real_test_report.json
tests/pybullet_results/: real_test_report.json
tests/sumo_results/: real_test_report.json
training/: README.md  __init__.py  evolution_loop.py  export_parquet.py  imagination.py  reward.py  rollout.py  skill_synthesis.py  tasks.py  trajectory.py  world_model.py
training/configs/: rollout_config.yaml  verl_grpo.yaml  world_model.yaml
training/scripts/: __init__.py  run_export.py  run_rollout.py  run_verl_train.py
(+49 files in other folders)
