[project]
name = "physical-ai-harness"
version = "0.1.0"
description = "Physical AI Harness - unified device orchestration for AI Agents"
requires-python = ">=3.10"
dependencies = [
    "ai2thor>=5.0.0",
    "mcp>=1.26.0",
    "Pillow>=9.0.0",
    "gradio>=4.0.0",
]

[project.optional-dependencies]
mujoco = [
    "mujoco>=3.0.0",
    "numpy>=1.24.0",
    "PyOpenGL>=3.1.0",
]
sumo = [
    "traci>=1.18.0",
    "sumolib>=1.18.0",
]
pybullet = [
    "pybullet>=3.2.0",
    "numpy>=1.24.0",
]
scenic = [
    "scenic>=3.0.0",
]
all = [
    "mujoco>=3.0.0",
    "numpy>=1.24.0",
    "PyOpenGL>=3.1.0",
    "traci>=1.18.0",
    "sumolib>=1.18.0",
    "pybullet>=3.2.0",
    "scenic>=3.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["harness*"]
